--- a/style.css
+++ b/style.css
@@ -10,3 +10,11 @@
     margin-right: 20px;
     margin-top: 10px;
 }
+#footer{
+    background-color: #f5f5f5;
+    line-height: 2;
+    margin: 0px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
+}
