--- a/style.css
+++ b/style.css
@@ -1,41 +1,28 @@
-
-.heading
-{
-width: 100%;
-text-align: left;
+#header{
+    margin: 0;
+    height: 50px;
+    text-align: center;
+    
 }
-.heading h3{
-    display: inline;
-}
-
-.heading button{
+#instructions{
+    margin: 0;
     float: right;
-    border: 1px solid white;
+    margin-right: 20px;
+    margin-top: 10px;
+}
+#footer{
+    background-color: #f5f5f5;
+    line-height: 2;
+    margin: 0px;
+    bottom: 0;
+    position: fixed;
+    width: 100%;
 }
 
-#start ,#status, #restart
+canvas
 {
-font-size: 22px;
-}
+    box-shadow: 5px 5px 5px white;
+    margin: 100px;
+    margin-left: 25%;
 
-.modal-dialog
-{
-    width: 70%;
 }
-.modal-body
-{
-    text-align: left;
-    font-size: 20px;
-}
-h4
-{
-   background-color: grey;
-   color:white;
-   line-height: 2;
-}
-canvas 
-  {
-      border:3px solid white;
-      border-radius: 20px;
-      box-shadow:  5px 5px 5px white;
-  }
